data/all_generated_tests/raw_wast_tests/unreachable_IncorrectConditionEvaluation_1339.wast
;; Integrate an `unreachable` instruction within a structured exception handling block, where `br_if` conditions aim to catch and handle different cases, ensuring that the unreachable trap isn’t incorrectly bypassed.

(assert_invalid
  (module
    (func $test_unreachable_with_br_if_handling
      (block
        (block (br_if 0 (i32.const 0)))
        (unreachable)
        (br 0)
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)